# docs/swagger.json
@@ -72,6 +72,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -243,6 +248,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates the scores of a match",
                 "consumes": [
                     "application/json"
@@ -313,6 +323,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -460,6 +475,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -648,6 +668,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates the name of an existing player by their UUID",
                 "consumes": [
                     "application/json"
@@ -715,6 +740,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -831,45 +861,44 @@
                 }
             }
         },
-        "/api/v1/players/{name}": {
-            "get": {
+        "/api/v1/users": {
+            "post": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "players"
+                    "users"
                 ],
-                "summary": "Get Player By Name",
+                "summary": "Create User",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Player Name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Match Type",
-                        "name": "match_type",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Season",
-                        "name": "season",
-                        "in": "query",
-                        "required": true
+                        "description": "User Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "email": {
+                                    "type": "string"
+                                },
+                                "password": {
+                                    "type": "string"
+                                },
+                                "registration_code": {
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_cscercel_volleyball-tracker_internal_db.GetPlayerStatsByNameRow"
+                                "$ref": "#/definitions/github_com_cscercel_volleyball-tracker_internal_db.CreateUserRow"
                             }
                         }
                     },
@@ -884,8 +913,201 @@
                             }
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/users/change-email": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update User Email",
+                "parameters": [
+                    {
+                        "description": "User Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "email": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_cscercel_volleyball-tracker_internal_db.UpdateUserEmailRow"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/users/login": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Login User",
+                "parameters": [
+                    {
+                        "description": "User Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "email": {
+                                    "type": "string"
+                                },
+                                "password": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_cscercel_volleyball-tracker_internal_service.UserLogin"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/users/password-reset": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update User Password",
+                "parameters": [
+                    {
+                        "description": "User Body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "password": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_cscercel_volleyball-tracker_internal_db.UpdateUserPasswordRow"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "object",
                             "properties": {
@@ -900,11 +1122,31 @@
         }
     },
     "definitions": {
+        "github_com_cscercel_volleyball-tracker_internal_db.CreateUserRow": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                }
+            }
+        },
         "github_com_cscercel_volleyball-tracker_internal_db.GetLeaderboardRow": {
             "type": "object",
             "properties": {
                 "conceded": {
                     "type": "integer"
+                },
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
                 },
                 "efficiency_rate": {},
                 "id": {
@@ -942,6 +1184,9 @@
                 },
                 "streak": {
                     "type": "integer"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
                 },
                 "win_rate": {},
                 "wins": {
@@ -995,54 +1240,8 @@
                 "conceded": {
                     "type": "integer"
                 },
-                "efficiency_rate": {},
-                "id": {
-                    "type": "string"
-                },
-                "longest_streak": {
-                    "type": "integer"
-                },
-                "losses": {
-                    "type": "integer"
-                },
-                "match_type": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "otl": {
-                    "type": "integer"
-                },
-                "played": {
-                    "type": "integer"
-                },
-                "player_id": {
-                    "type": "string"
-                },
-                "points": {
-                    "type": "integer"
-                },
-                "scored": {
-                    "type": "integer"
-                },
-                "season": {
-                    "type": "integer"
-                },
-                "streak": {
-                    "type": "integer"
-                },
-                "win_rate": {},
-                "wins": {
-                    "type": "integer"
-                }
-            }
-        },
-        "github_com_cscercel_volleyball-tracker_internal_db.GetPlayerStatsByNameRow": {
-            "type": "object",
-            "properties": {
-                "conceded": {
-                    "type": "integer"
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
                 },
                 "efficiency_rate": {},
                 "id": {
@@ -1080,6 +1279,9 @@
                 },
                 "streak": {
                     "type": "integer"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
                 },
                 "win_rate": {},
                 "wins": {
@@ -1130,6 +1332,54 @@
                 },
                 "updated_at": {
                     "$ref": "#/definitions/pgtype.Timestamptz"
+                }
+            }
+        },
+        "github_com_cscercel_volleyball-tracker_internal_db.UpdateUserEmailRow": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                }
+            }
+        },
+        "github_com_cscercel_volleyball-tracker_internal_db.UpdateUserPasswordRow": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                }
+            }
+        },
+        "github_com_cscercel_volleyball-tracker_internal_service.UserLogin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
                 }
             }
         },
